--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
+  "scripts": {
+   "ng": "ng",
+   "start": "ng serve",
+   "build": "ng build",
+   "test": "ng test"
+   },
   "dependencies": {
     "@angular/cli": "1.1.3",
     "@angular/common": "^4.0.0",
